--- a/mod.html
+++ b/mod.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Rex</title>
-    <link rel="stylesheet" href="novo.css">
+    <link rel="stylesheet" href="mod.css">
     <link rel="stylesheet" href="tabs.css">
 </head>
 <body>
