--- a/mod.html
+++ b/mod.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Rex</title>
     <link rel="stylesheet" href="mod.css">
-    <link rel="stylesheet" href="tabs.css">
+    <link rel="stylesheet" href="mod1.css">
 </head>
 <body>
     <main>
