--- a/mod.html
+++ b/mod.html
@@ -130,7 +130,7 @@
         
     </main>
 
-<script src="main.js"></script>
+<script src="mod.js"></script>
 <script src="tabs.js"></script>
     
 </body>
