--- a/mod.html
+++ b/mod.html
@@ -131,7 +131,7 @@
     </main>
 
 <script src="mod.js"></script>
-<script src="tabs.js"></script>
+<script src="mod1.js"></script>
     
 </body>
 </html>
